--- a/neighbourhood/templates/registration/signup.html
+++ b/neighbourhood/templates/registration/signup.html
@@ -1,7 +1,8 @@
-{%extends 'base.html'%} {% load bootstrap3 %}
+{% extends 'base.html' %}
 {% block content %}
+<div class="container">
   <h2>Sign up</h2>
-  <form method="post" action="/accounts/register/">
+<form method="post" action="{%url 'signup' %}">
     {% csrf_token %}
       {% for field in form %}
       <p>
@@ -16,5 +17,7 @@
       </p>
       {% endfor %}
     <button type="submit">Sign up</button>
-  </form>
+</form>
+
+</div>
 {% endblock %}
