--- a/neighbourhood/templates/base.html
+++ b/neighbourhood/templates/base.html
@@ -1,5 +1,5 @@
 {% load bootstrap3 %}
-{% load staticfiles %}
+{% load static %}
 <!DOCTYPE html>
 <html>
 
@@ -16,17 +16,20 @@
 
   {% block styles %}
     {% bootstrap_css %}
+  <link rel="stylesheet" href="{% static 'css/styles.css' %}">
   {% endblock %}
 
 </head>
 
 <body>
 
+    {% include "navbar.html" %}
   {% block content %}  {%endblock%}
 
 
   {% block scripts %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="{%static 'scripts/main.js' %}"></script>
     {% bootstrap_javascript %}
   {% endblock %}
 
