creayed a Profies model

--- a/neighbourhood/templates/navbar.html
+++ b/neighbourhood/templates/navbar.html
@@ -8,6 +8,7 @@
                   <li>
                     <a href="/accounts/password/change">Change Password</a>
                   </li>
+                    <li><a>{{request.user.username}}</a></li>
                   <li>
                     <a href="/logout">Logout</a>
                   </li>
