created models all

--- a/neighbourhood/templates/navbar.html
+++ b/neighbourhood/templates/navbar.html
@@ -6,9 +6,9 @@
                     <a href="/">Home</a>
                   </li>
                   <li>
-                    <a href="/accounts/password/change">Change Password</a>
+
                   </li>
-                    <li><a>{{request.user.username}}</a></li>
+                    <li><a href="/accounts/profile">{{request.user.username}}</a></li>
                   <li>
                     <a href="/logout">Logout</a>
                   </li>
