--- a/neighbourhood/templates/base.html
+++ b/neighbourhood/templates/base.html
@@ -6,6 +6,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
 
   {%if title%}
@@ -21,7 +22,7 @@
 
 </head>
 
-<body>
+<body style="background-color: #1966C3">
 
     {% include "navbar.html" %}
   {% block content %}  {%endblock%}
