--- a/neighbourhood/templates/profile.html
+++ b/neighbourhood/templates/profile.html
@@ -17,13 +17,13 @@
     <span class="caret"></span></button>
     <ul class="dropdown-menu">
       <li><a href="/accounts/password/change"><button>Change Password</button></a></li>
-        <li><a><button data-target="#profile" data-toggle="modal" data-ta>Edit Profile</button></a></li>
-      <li><a href="#">JavaScript</a></li>
+        <li><a><button data-target="#profile" data-toggle="modal" >Edit Profile</button></a></li>
+      <li><a><button data-target="#business" data-toggle="modal">Post Your Business</button></a></li>
     </ul>
   </div>
  <h1 style="text-align: center; color: cyan">{{request.user.profile.Name}}</h1>
  <h3 style="color: white">{{request.user.profile.bio}}</h3>
-
+<!--update profile model-->
    <div class="modal fade" id="profile" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -34,7 +34,7 @@
         </button>
       </div>
       <div class="modal-body">
-        <form  action="{%url 'profile'%}" method="post" enctype="multipart/form-data">
+        <form  action="{%url 'business'%}" method="post" enctype="multipart/form-data">
     {%csrf_token%}
 
     {% bootstrap_form prof%}
@@ -47,6 +47,32 @@
     </div>
   </div>
    </div>
+                <!--End of profile modal-->
+                <!--Business modal-->
+ <div class="modal fade" id="business" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Update people of your business</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form  action="{%url 'profile'%}" method="post" enctype="multipart/form-data">
+    {%csrf_token%}
+
+    {% bootstrap_form biz%}
+    <input type="submit" class="btn btn-success btn-lg" value="Post">
+  </form>
+      </div>
+      <div class="modal-footer">
+        ...
+      </div>
+    </div>
+  </div>
+   </div>
+                <!--end of business modal-->
                 <hr>
 
 
