--- a/neighbourhood/templates/index.html
+++ b/neighbourhood/templates/index.html
@@ -1,4 +1,11 @@
 {%extends 'base.html' %}
 {% block content %}
-<h1>good show</h1>
+<div class="jumbotron">
+    <div class="header">
+        <h1 style="color: black"><b>MAJIRANIAPP</b></h1>
+        <h3  style="color: cyan"">Keep track of your neighbourhood here by getting all the latest details</h3>
+        <h3  style="color: cyan">Your can always update your neighbourhood in the profile settings among other fun features</h3>
+
+    </div>
+</div>
 {% endblock %}
