--- a/neighbourhood/templates/index.html
+++ b/neighbourhood/templates/index.html
@@ -8,4 +8,14 @@
 
     </div>
 </div>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 border">
+           <h2>POSTS</h2>
+        </div>
+        <div class="col-md-6">
+            <h2>BUSSINESSES</h2>
+        </div>
+    </div>
+</div>
 {% endblock %}
