--- a/neighbourhood/templates/index.html
+++ b/neighbourhood/templates/index.html
@@ -1,28 +1,32 @@
-{%extends 'base.html' %}
-{% load bootstrap3 %}
-{% block content %}
+{%extends 'base.html' %} {% load bootstrap3 %} {% block content %}
 <div class="jumbotron">
-    <div class="header">
-        <h1 style="color: black"><b>MAJIRANIAPP</b></h1>
-        <h3  style="color: cyan"">Keep track of your neighbourhood here by getting all the latest details</h3>
-        <h3  style="color: cyan">Your can always update your neighbourhood in the profile settings among other fun features</h3>
+  <div class="header">
+    <h1 style="color: black"><b>MAJIRANIAPP</b></h1>
+    <h3 style="color: cyan" ">Keep track of your neighbourhood here by getting all the latest details</h3>
+        <h3  style="color: cyan ">Your can always update your neighbourhood in the profile settings among other fun features</h3>
 
     </div>
 </div>
-<div class="container">
-    <div class="row">
-        <div class="col-md-6 border">
+<div class="container ">
+    <div class="row ">
+        <div class="col-md-6 border ">
            <h2>POSTS</h2>
             {% for message in messages.all %}
-            <div class="profile-image">{% if request.user.profile.dp %}
-            <img src="{{request.user.profile.dp.url}}" class="img-circle" width="20px" height="20px">{{user.username}}:{{message.Text}}{%else%}
-                <img src="https://images.unsplash.com/photo-1535930749574-1399327ce78f?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=1f8a140ac20927deb386d1c9187433d6&auto=format&fit=crop&w=500&q=60"  class="rounded-circle" width="50px" height="50px">{{item.user.username}}
+            <div class="profile-image ">{% if request.user.profile.dp %}
+            <img src="{{request.user.profile.dp.url}} " class="img-circle " width="20px " height="20px ">{{user.username}}:{{message.Text}}{%else%}
+                <img src="https://images.unsplash.com/photo-1535930749574-1399327ce78f?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=1f8a140ac20927deb386d1c9187433d6&auto=format&fit=crop&w=500&q=60 "  class="rounded-circle " width="50px " height="50px ">{{item.user.username}}
                 {% endif %}
                 {%endfor %}
+                <form  action="{%url 'index'%} " method="post " enctype="multipart/form-data ">
+    {%csrf_token%}
+
+    {% bootstrap_form form%}
+    <input type="submit " class="btn btn-success " value="Post ">
+  </form>
             </div>
         </div>
-        <div class="col-md-6">
-            <h2>BUSSINESSES</h2>
+        <div class="col-md-6 ">
+            <h2>BUSINESSES</h2>
             {% for biz in mabiz.all %}
             <p>{{biz.business.business_name}}</p>
             {% endfor %}
