--- a/neighbourhood/templates/index.html
+++ b/neighbourhood/templates/index.html
@@ -9,7 +9,7 @@
 </div>
 <div class="container ">
     <div class="row ">
-        <div class="col-md-6 border ">
+        <div class="col-md-6 border">
            <h2>POSTS</h2>
             {% for message in messages.all %}
             <div class="profile-image ">{% if request.user.profile.dp %}
@@ -18,20 +18,20 @@
                 {% endif %}
                 {%endfor %}
                 <form  action="{%url 'index'%} " method="post " enctype="multipart/form-data ">
-    {%csrf_token%}
+                    {%csrf_token%}
 
-    {% bootstrap_form form%}
-    <input type="submit " class="btn btn-success " value="Post ">
-  </form>
+                    {% bootstrap_form form%}
+                    <input type="submit " class="btn btn-success " value="Post ">
+                </form>
             </div>
         </div>
-        <div class="col-md-6 ">
-            <h2>BUSINESSES</h2>
+        <div class="col-md-6">
+            <h3>Businesses</h3>
             {% for biz in mabiz.all %}
             <p>{{biz.business.business_name}}</p>
             {% endfor %}
-
         </div>
+
     </div>
 </div>
 {% endblock %}
