--- a/neighbourhood/templates/registration/signup.html
+++ b/neighbourhood/templates/registration/signup.html
@@ -1,7 +1,13 @@
 {% extends 'base.html' %}
+{% load bootstrap3 %}
 {% block content %}
 <div class="container">
-  <h2>Sign up</h2>
+  <div class="row">
+      <div class="col-md-5"></div>
+      <div class="col-md-5">
+          <div class="card">
+  <div class="card-header"> <h2>Sign up</h2></div>
+  <div class="card-body">
 <form method="post" action="{%url 'signup' %}">
     {% csrf_token %}
       {% for field in form %}
@@ -18,6 +24,10 @@
       {% endfor %}
     <button type="submit">Sign up</button>
 </form>
-
+      </div>
 </div>
+</div>
+      <div class="col-md-2"></div>
+</div>
+  </div>
 {% endblock %}
