added hoods in the navbar

--- a/neighbourhood/templates/navbar.html
+++ b/neighbourhood/templates/navbar.html
@@ -12,6 +12,9 @@
                   <li>
                     <a href="/logout">Logout</a>
                   </li>
+                    <li>
+                        <a href="/hoods">Neighbourhoods</a>
+                    </li>
                 </ul>
               </li>
             </ul>
