added hoods in the templates

--- a/neighbourhood/templates/navbar.html
+++ b/neighbourhood/templates/navbar.html
@@ -9,12 +9,12 @@
 
                   </li>
                     <li><a href="/accounts/profile">{{request.user.username}}</a></li>
+                    <li>
+                        <a href="/hoods">Hoods</a>
+                    </li>
                   <li>
                     <a href="/logout">Logout</a>
                   </li>
-                    <li>
-                        <a href="/hoods">Neighbourhoods</a>
-                    </li>
                 </ul>
               </li>
             </ul>
