fixing attribute error in heroku

--- a/neighbourhood/templates/index.html
+++ b/neighbourhood/templates/index.html
@@ -1,9 +1,9 @@
 {%extends 'base.html' %} {% load bootstrap3 %} {% block content %}
 <div class="jumbotron">
-  <div class="header">
+  <div class="header" id="display-text">
     <h1 style="color: black"><b>MAJIRANIAPP</b></h1>
-    <h3 style="color: cyan" ">Keep track of your neighbourhood here by getting all the latest details</h3>
-        <h3  style="color: cyan ">Your can always update your neighbourhood in the profile settings among other fun features</h3>
+    <h3 style="color: white">Keep track of your neighbourhood here by getting all the latest details</h3>
+        <h3  style="color: white ">Your can always update your neighbourhood in the profile settings among other fun features</h3>
 
     </div>
 </div>
