--- a/neighbourhood/static/css/styles.css
+++ b/neighbourhood/static/css/styles.css
@@ -82,3 +82,11 @@ section{
 .border {
 border-right: 1px solid black;
 }
+#display-text {
+    position: relative;
+    opacity: 0.5;
+    background-color: #01193f;
+    width: 100%;
+    margin: auto;
+    padding-bottom: 10%;
+}
