--- a/neighbourhood/templates/index.html
+++ b/neighbourhood/templates/index.html
@@ -27,8 +27,8 @@
         </div>
         <div class="col-md-6">
             <h3>Businesses</h3>
-            {% for biz in mabiz.all %}
-            <p>{{biz.business.business_name}}</p>
+            {% for biz in mabiz %}
+            <p>{{biz.business_name}}</p>
             {% endfor %}
         </div>
 
