--- a/neighbourhood/templates/index.html
+++ b/neighbourhood/templates/index.html
@@ -28,7 +28,9 @@
         <div class="col-md-6">
             <h3>Businesses</h3>
             {% for biz in mabiz %}
-            <p>{{biz.business_name}}</p>
+            <p>BUSINESS NAME:{{biz.business_name}}</p>
+            <p>DESCRIPTION:{{biz.description}}</p>
+
             {% endfor %}
         </div>
 
